--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
     <script defer src="https://unpkg.com/es-module-shims@0.4.6/dist/es-module-shims.js"></script>
     <script type="importmap-shim">
         {
-        "imports": {
-            "three": "https://unpkg.com/three@0.118.1/build/three.module.js",
-            "three/examples/jsm/": "https://unpkg.com/three@0.118.1/examples/jsm/"
-        }
+            "imports": {
+                "three": "https://unpkg.com/three@0.118.1/build/three.module.js",
+                "three/examples/jsm/": "https://unpkg.com/three@0.118.1/examples/jsm/"
+            }
         }
     </script>
+    <script defer src="./js/shaders/vertexShaders.js"></script>
+    <script defer src="./js/shaders/fragmentShaders.js"></script>
 </head>
 <body>
     <div class="webGLContainer"></div>
 
       <script type="module-shim" src="./main.js"></script>
+      <!-- <script type="module-shim" src="./shaders.js"></script> -->
     </body>
 </html>
